# deepfilter-multimedia

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  vid.py
deepfilter_multimedia/: __init__.py  __main__.py  cli.py  core.py
deepfilter_multimedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
