[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfilter-multimedia"
version = "0.1.0"
description = "Noise reduction for audio and video files using DeepFilterNet"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sveinung Myhre"}
]
keywords = ["audio", "video", "noise-reduction", "deepfilternet", "speech-enhancement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "deepfilternet>=0.5.0",
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.scripts]
dfm = "deepfilter_multimedia.cli:main"

[project.urls]
Homepage = "https://github.com/svemyh/deepfilter-multimedia"
"Bug Reports" = "https://github.com/svemyh/deepfilter-multimedia/issues"
"Source" = "https://github.com/svemyh/deepfilter-multimedia"
"DeepFilterNet" = "https://github.com/Rikorose/DeepFilterNet"

[tool.setuptools]
packages = ["deepfilter_multimedia"]
